feat(go): [image]add aes encrypt/decrypt endpoints
