# backend/go-tools/github.com/alice52/tool-encrypt/service/aes/router.go
@@ -1,0 +1,10 @@
+package aes
+
+import "github.com/gin-gonic/gin"
+
+func Routers(e *gin.Engine) {
+
+	e.GET("/aes-decrypt", decryptHandler)
+
+	e.GET("/aes-encrypt", encryptHandler)
+}
